# Metis

./: AUTHORS  GNUmakefile.in  README  README.md  config.h.in  configure  configure.ac
app/: hist.cc  kmeans.cc  linear_regression.cc  matrix_mult.cc  matrix_mult2.cc  minmaponly.cc  mm.hh  pca.cc  string_match.cc  wc.cc  wr.cc  wr.hh  wrmem.cc
data_tool/: data-gen.sh
lib/: Makefrag  appbase.hh  application.cc  application.hh  array.hh  bench.hh  bsearch.hh  btree.cc  btree.hh  comparator.hh  cpumap.cc  cpumap.hh  defsplitter.hh  group.hh  ibs.cc  ibs.hh  map_bucket_manager.hh  mergesort.hh  metis_runtime.cc  metis_runtime.hh  mr-types.cc  mr-types.hh  platform.cc  platform.hh  pmcreg.hh  predictor.hh  profile.cc  profile.hh  psrs.hh  pthreadpool.cc  reduce.hh  reduce_bucket_manager.hh  test_util.hh  thread.hh  threadinfo.cc  threadinfo.hh
metis/: .gitignore  GNUmakefile  GNUmakefile.in  config.h.in  configure.ac
metis/app/: hist.cc  kmeans.cc  linear_regression.c  linear_regression.cc  matrix_mult.c  matrix_mult.cc  matrix_mult2.c  matrix_mult2.cc  mm.hh  pca.cc  string_match.c  string_match.cc  wc.cc  wr.cc  wr.hh  wrmem.cc
metis/data_tool/: clean.sh  data-gen.sh
metis/lib/: .btree.cc.swp  .btreebktmgr.cc.swp  Makefrag  appendbktmgr.cc  appendbktmgr.hh  apphelper.cc  apphelper.hh  application.cc  application.hh  array.hh  arraybktmgr.cc  arraybktmgr.hh  bench.hh  bsearch.cc  bsearch.hh  btree.cc  btree.hh  btreebktmgr.cc  btreebktmgr.hh  comparator.cc  comparator.hh  compiler.hh  cpumap.cc  defsplitter.cc  defsplitter.hh  estimation.cc  estimation.hh  ibs.cc  ibs.hh  keyval_array.cc  keyvals_array.cc  keyvals_btree.cc  keyvals_len_array.cc  kvstore.cc  kvstore.hh  map_bucket_manager.hh  mbktsmgr.hh  mergesort.cc  mergesort.hh  metis_runtime.cc  (+28 more)
metis/micro/: Makefrag  btree_unit.cc  search_unit.cc  sf_sample.c  sf_sample.cc
metis/pkg/streamflow/: override.c
metis/test/: run_all.py
micro/: btree_unit.cc  misc.cc  search_unit.cc  sf_sample.cc
test/: run_all.py
